<resources>
    <string name="app_name">Homework_7_1</string>
    <string name="my_home">My home</string>
    <string name="cameras">Cameras</string>
    <string name="doors">Doors</string>
    <string name="lounge">Lounge</string>
    <string name="camera_number">Camera 0</string>
    <string name="online">Online</string>
    <string name="homephone">Homephone</string>
    <string name="room_number">Room 0</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
</resources>